Added Authentication and did few UI changes

--- a/EmployeeManagement/Content/Salary.css
+++ b/EmployeeManagement/Content/Salary.css
@@ -1,6 +1,6 @@
 ﻿a.salaryindex:link, a.salaryindex:visited {
-    background-color: #161678;
-    color: white;
+    background-color: navy;
+   
     padding: 30px 30px;
     text-align: center;
     text-decoration: none;
