--- a/EmployeeManagement/Views/Shared/InternalServerError.cshtml
+++ b/EmployeeManagement/Views/Shared/InternalServerError.cshtml
@@ -3,5 +3,5 @@
     ViewBag.Title = "InternalServerError";
 }
 
-<h2>Oops... There is a internal Server Error Our IT Team is working on it</h2>
+<img src="~/img/500Error.png" style="width:100%"/>
 
