--- a/EmployeeManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagement/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
             <li class="li">@Html.ActionLink("Home", "Index", "Home")</li>
             <li class="li">@Html.ActionLink("About", "About", "Home")</li>
             <li class="li">@Html.ActionLink("Contact", "Contact", "Home")</li>
+            <li class="li" style="float:right;"> @Html.ActionLink("Logout", "Logout", "Home", new { onclick = "return confirm('Do you want to Exit')" })</li>
         </ul>
 
     </div>
